# serializer version: 1
# name: TestEditCall.test_call_default[event]
  14.0
# ---
# name: TestEditCall.test_call_default[interval]
  6.0
# ---
# name: TestEditCall.test_call_default[state]
  3.0
# ---
# name: TestEditCall.test_call_with_normalize[event]
  0.875
# ---
# name: TestEditCall.test_call_with_normalize[interval]
  1.0
# ---
# name: TestEditCall.test_call_with_normalize[state]
  1.0
# ---
